--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -158,7 +158,7 @@
         <!-- 轮播end -->
       </div>
       <div class="div-area-two">
-        <span class="span-title">通知公告·NB</span>
+        <span class="span-title">通知公告·NA</span>
         <!-- 搜索框start -->
         <div class="div-search">
           <form class="navbar-form navbar-left" role="search">
